Addition source file
I am adding new source file from C-Lion.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,7 @@ add_executable(mmn14 main.c
         errors.c
         errors.h
         token_utils.c
-        token_utils.h)
+        token_utils.h
+        label.h
+        label.c
+        globals.h)
